# django_get_absolute_url

./: README.md  setup.cfg
get_absolute_url/: apps.py  helpers.py
